# JaxVision

./: .gitignore  LICENSE  README.md  data.py  dataset.py  datasets.py  params.py  predict.py  pyproject.toml  test.py  train.py  train_grain.py  train_multi.py  transforms.py
jaxvision/: __init__.py  transforms.py  utils.py
jaxvision/models/: __init__.py  _utils.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  inception.py  mambaout.py  maxvit.py  mnasnet.py  mobilenet.py  mobilenetv2.py  mobilenetv3.py  regnet.py  resnet.py  shufflenetv2.py  squeezenet.py  swin_transformer.py  vgg.py  vision_transformer.py
jaxvision/ops/: __init__.py  misc.py  stochastic_depth.py
models/: __init__.py  _utils.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  inception.py  mambaout.py  maxvit.py  mnasnet.py  mobilenet.py  mobilenetv2.py  mobilenetv3.py  regnet.py  resnet.py  shufflenetv2.py  squeezenet.py  swin_transformer.py  vgg.py  vision_transformer.py
ops/: __init__.py  misc.py  stochastic_depth.py
