[project]
name = "jaxvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "flax[all]>=0.10.6",
    "grain>=0.2.10",
    "jax[tpu]>=0.6.2",
    "opencv-python>=4.11.0.86",
    "optax>=0.2.5",
    "orbax>=0.1.9",
    "ruff>=0.11.11",
    "setuptools>=80.9.0",
    "tpu-info>=0.3.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
target-version = "py312"
line-length = 200
fix = true
cache-dir = ".ruff_cache"
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "D103",
    "D101",
    "D102",
    "D107",
    "D100",
    "C901",
    "D417",
    "D205",
    "D401",
    "ERA001",
    "FBT003",
    "T201",
    "F403",
    "TID252",
    "D104",
    "D203",
    "D211",
    "D213",

]
